исправлена опечатка в style.css

--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ main {
   line-height: auto;
 
   cursor: pointer;
-F}
+}
 
 .img-filters__radio:focus + .img-filters__label {
   outline: auto 5px highlight;
