--- a/css/style.css
+++ b/css/style.css
@@ -1427,5 +1427,19 @@ main {
   top: 0;
   width: 30%;
   font-size: 10px;
+}
 
+.alert {
+  z-index: 100;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  padding: 15px 10px;
+  font-size: 25px;
+  text-align: center;
+  background-color: #fe4c4c;
+  line-height: normal;
+  border-radius: 30px;
+  max-width: 25%;
+  min-width: min-content;
 }
